# tuesdaylab_takehome

./: README.md  setup.sh
src/algorithms/: CMakeLists.txt  package.xml
src/algorithms/src/: clock_pose_issuer.cpp  get_target_pose_srv_test.cpp  guicli_pose_issuer.cpp  motion_controller.cpp  pose_manager.cpp
src/bringup/: CMakeLists.txt  package.xml
src/bringup/config/: robot_config.yaml
src/bringup/launch/: fullrun.launch.xml  guicli_turtlesim_test.launch.xml  posemanager_test.launch.xml
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/srv/: GetTargetPose.srv
